<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One Hand Clapping</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_record">Record</string>
    <string name="nav_item_claps">Claps</string>
    <string name="nav_item_stuff">Stuff</string>
    <string name="nav_item_practice">Practice</string>


    <!-- navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_record</item>
        <item>@string/nav_item_claps</item>
        <item>@string/nav_item_stuff</item>
        <item>@string/nav_item_practice</item>

    </string-array>

    <string name="title_stuff">Stuff</string>
    <string name="title_claps">Claps</string>
    <string name="title_record">Record</string>
    <string name="title_practice">Practice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display name</string>
    <string name="dlg_title">Dialog title</string>
    <string name="toast">Toast</string>
    <string name="back">Back</string>
    <string name="value">Value</string>
    <string name="title_activity_dialog">DialogActivity</string>

    <!--record fragment-->
    <string name="rec_frag_toptv">One Hand Clapping: Recording</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="play_button">Play</string>
    <string name="stop_play_button">Stop Playing</string>
    <string name="save_button">Save</string>
    <string name="stop_top_tv">One Hand Clapping: Stop recording</string>
    <string name="play_top_tv">One Hand Clapping: Playing</string>

    <!-- dialog activity -->
    <string name="clap_etxt_hint">Name</string>
    <string name="clap_etxt_hint_2">Input some other stuff</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_second_page">SecondPage</string>
    <string name="title_activity_transition_activity">Transition Activity</string>
    <string name="title_activity_practice">Practice</string>


</resources>
