
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport ="true"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rec_frag_toptv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:id="@+id/linear_top"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/micImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@android:drawable/presence_audio_online" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_rec"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/micImageStop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@android:drawable/presence_audio_busy"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/playImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/playa"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/pauseImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/pause"
            android:visibility="gone"/>

    </LinearLayout>
    <!--<ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_rec"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>
&lt;!&ndash;
    <ImageView
        android:id="@+id/micImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/presence_audio_online" />
&ndash;&gt;
    <ImageView
        android:id="@+id/micImageStop"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/presence_audio_busy"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/playImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/playa"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/pauseImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/pause"
        android:visibility="gone"/>-->

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linear_top"
        android:id="@+id/linearbuttons"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:layout_weight="1"
            android:text="@string/stop_button" />

    </LinearLayout>

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearbuttons"
        android:id="@+id/linear2"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="10dp"
            android:text="@string/play_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stopPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:layout_weight="1"

            android:text="@string/stop_play_button" />
        <!--blah blah-->

    </LinearLayout>




        <Button
            android:id="@+id/saveb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_below="@+id/linear2"
            android:layout_centerInParent="true"
            android:ems="10"
            android:text="@string/save_button"
            />



</RelativeLayout>

    </ScrollView>